--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="mealy">
 <head>
   <meta charset="UTF-8">
   <title>Mealy</title>
@@ -11,15 +11,18 @@
 <body>
   
 <h1 class="text-primary">Mealy: <small>a meal reservation app for people who love to eat together</small></h1>
-<button class="btn btn-primary">button</button>
 
-<div ui-view></div>
+<div ng-view></div>
 
 
-<script src="lib/bower_components/angular/angular.js"></script>
 <!-- <script src="lib/bower_components/angular/angular.min.js"></script> -->
-<script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/bower_components/angular/angular.js"></script>
+<script src="lib/bower_components/angular-route/angular-route.min.js"></script>
+<script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="app/app.js"></script>
+
 
 </body>
 </html>
