--- a/client/app/cook.html
+++ b/client/app/cook.html
@@ -1,19 +1,22 @@
 <div class="container">
   <div class="jumbotron">
-    <form name="cook" ng-submit="">
+    <form name="cook" ng-submit="addMeal(meal)")>
 
       <!-- <div class="error" ng-if='shortener.shortenInput.$invalid'>Please enter a valid URL</div> -->
       <h3>What do you want to cook?</h3>
 
-      <input type='text' name='menu' ng-model='a' placeholder="Main menu">
+      <input type='text' name='menu' ng-model='meal.menu' placeholder="Main menu">
       <h5>Alternative options?</h5>
-      <input type='text' name='veg-menu' ng-model='b' placeholder="Vegetarian alternative">
-      <input type='text' name='glut-menu' ng-model='c' placeholder="Gluten-free alternative">
+      <input type='text' name='veg-menu' ng-model='meal.veg' placeholder="Vegetarian alternative">
+      <input type='text' name='glut-menu' ng-model='meal.glut' placeholder="Gluten-free alternative">
       <h5>When do you want to serve it? </h5>
-      <input type="date" name="date">
-      <input type="time" value="18:00">
+      <input type="date" name="date" ng-model='meal.date'>
+
+      <input disabled  type="time" value="18:00:00"  /> <!-- ng-model=meal.time -->
+
       <h5>Your name?</h5>
-      <input type='text' name='cook-name' ng-model='d' placeholder="Hail to the cook!">
+
+      <input type='text' name='cook-name' ng-model='meal.cookname' placeholder="Hail to the cook!">
 
       <button ng-disabled ='cook.$pristine'>Submit</button>
     </form>
