--- a/client/index.html
+++ b/client/index.html
@@ -16,11 +16,20 @@
 
 
 <!-- <script src="lib/bower_components/angular/angular.min.js"></script> -->
-<script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="lib/bower_components/angular/angular.js"></script>
-<script src="lib/bower_components/angular-route/angular-route.min.js"></script>
-<script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+<!-- <script src="lib/bower_components/jquery/dist/jquery.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+
+<!-- <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<!-- <script src="lib/bower_components/angular/angular.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+
+<!-- <script src="lib/bower_components/angular-route/angular-route.min.js"></script> -->
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
+<!-- <script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script> -->
+
 <script src="app/app.js"></script>
 
 
