--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 
 <!-- <script src="lib/bower_components/angular-route/angular-route.min.js"></script> -->
-ƒ<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
 <!-- <script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script> -->
 
 <script src="app/app.js"></script>
