--- a/client/app/eat.html
+++ b/client/app/eat.html
@@ -1,15 +1,44 @@
-<div class="container">
+<div class="container-fluid" ng-controller='CookController'>
   <div class="jumbotron">
   
-  <div ng-repeat="meal in meals">
+      <table class="table table-striped table-bordered table-hover table-condensed table-responsive">
+        <thead>
+          <tr>
+            <th>Main Menu</th>
+            <th>Vegetarian Option</th>
+            <th>Gluten-Free Option</th>
+            <th>Cook's Name</th>
+            <th>Date of Meal</th>
+            <th>Mmm...</th>
+          </tr>
+        </thead>
+        <tbody>
+
+  <!-- <div ng-repeat="meal in meals"> -->
       
-      <div>{{meal.menu}}</div>
-      <div>{{meal.veg}}</div>
-      <div>{{meal.glut}}</div>
-      <div>{{meal.cookname}}</div>
-      <div>{{meal.date}}</div>
-
+            <tr ng-repeat="meal in meals">
+              <td>{{meal.menu}}</td>
+              <td>{{meal.veg}}</td>
+              <td>{{meal.glut}}</td>
+              <td>{{meal.cookname}}</td>
+              <td> {{ meal.date | date: 'fullDate' }} </td>
+              <td><button ng-click='beginReservation()' class="btn btn-warning">Reserve</button></td>
+            </tr>
+           
+          </tbody>
+        </table>
   </div>
 
-  </div>
+    <!-- <div class="jumbotron" ng-if="reserve"> -->
+      <div class="well" ng-if="reserved">
+        <p class="lead text-center">That'll be $4</p>
+        <form name='reservation' ng-submit='reserve(eaterName)'>
+          <input class="center-block" type="text" name="reserve-input" placeholder="What's your name?" ng-model="eaterName" />
+        </form>
+      </div>
+    <!-- </div> -->
+
+  <!-- </div> -->
+
 </div>
+
