Controller/factory for signup and login, links to same from index

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,10 @@
 <body>
   
 <h1 class="text-primary">Mealy: <small>a meal reservation app for people who love to eat together</small></h1>
+<div class="pull-right">
+  <a href="#/login" class="btn btn-default">Login</a href="#/">
+  <a href="#/signup" class="btn btn-default">Signup</a href="#/">
+</div>
 
 <div ng-view></div>
 
