In the middle of implementing eater profile display, tab incrementation etc.

--- a/client/app/signup.html
+++ b/client/app/signup.html
@@ -23,6 +23,15 @@
     </form>
 
   </div>
+  <div class="jumbotron center-block" ng-if='loggedIn'>
+    <h3>Congrats! You are logged in! Want to:</h3>
+    <br>
+    <div class="center-block">
+
+      <a href='#/cook' class="btn btn-block btn-lg btn-primary">Cook</a> 
+      <a href="#/eat" class="btn btn-block btn-lg btn-info">Eat</a>
+    </div> 
+  </div>
     <!-- <div ng-if='sent'>
       success msg
     </div> -->
