Centered reserve success div

--- a/client/app/eat.html
+++ b/client/app/eat.html
@@ -34,9 +34,9 @@
     <div ng-if='reserveSuccess'>
       <div class="well">
         <div class="center-block">
-          <h6>Thanks! Your reservations has been made for:</h6>
-          <p class="lead">{{meal.date | date: 'fullDate'}}</p>
-          <p>with head cook {{meal.cookname}}</p>
+          <h6 class="text-center">Thanks! Your reservations has been made for:</h6>
+          <p class="lead text-center">{{meal.date | date: 'fullDate'}}</p>
+          <p class="text-center">with head cook {{meal.cookname}}</p>
          </div> 
       </div>
     </div>
