Linkified the brand name header

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
 <body>
   
-<h1 class="text-primary">Mealy: <small>a meal reservation app for people who love to eat together</small></h1>
+<h1 class="text-primary"><a href="#/">Mealy:</a> <small>a meal reservation app for people who love to eat together</small></h1>
 <div class="pull-right">
   <a ng-hide='loggedIn' href="#/login" class="btn btn-default">Login</a>
   <a ng-hide='loggedIn' href="#/signup" class="btn btn-default">Signup</a>
